# Hikage

./: CMakeLists.txt  README.md
examples/GravLensing/: default.frag  hikage.proj  script.py
examples/Sunset/: default.frag  hikage.proj
include/: CMakeLists.txt
include/config/: Config.h  Project.h  Texture.h
include/rendering/: Icon.h  Shader.h  Uniforms.h  Viewport.h
include/script/: Callbacks.h  Script.h
include/util/: utilOS.h
include/views/: ErrorLog.h  Menubar.h  NewProject.h  ShaderView.h  StartMenu.h  TexturesView.h  View.h  ViewUtil.h  Viewable.h  ViewportSettings.h
src/: CMakeLists.txt  main.cpp
src/config/: Config.cpp  Project.cpp  Texture.cpp
src/rendering/: Icon.cpp  Shader.cpp  Uniforms.cpp  Viewport.cpp
src/script/: Callbacks.cpp  Script.cpp
src/util/: utilLinux.cpp
src/views/: ErrorLog.cpp  Menubar.cpp  NewProject.cpp  ShaderView.cpp  StartMenu.cpp  TexturesView.cpp  View.cpp  ViewUtil.cpp  ViewportSettings.cpp
